@startuml

title __XML's Class Diagram__\n

  namespace fr.insa.lyon.ifa1 {
    namespace xml {
      class fr.insa.lyon.ifa1.xml.InvalidXMLTagException {
          {static} - serialVersionUID : long
          + InvalidXMLTagException()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace xml {
      class fr.insa.lyon.ifa1.xml.XMLDeserialization {
          {static} + deserialize()
          {static} + deserialize()
          {static} + deserializeMap()
          {static} + deserializeRequests()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace xml {
      class fr.insa.lyon.ifa1.xml.XMLMapHandler {
          + startElement()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace xml {
      class fr.insa.lyon.ifa1.xml.XMLRequestsHandler {
          + startElement()
      }
    }
  }
  

  fr.insa.lyon.ifa1.xml.InvalidXMLTagException -up-|> org.xml.sax.SAXException
  fr.insa.lyon.ifa1.xml.XMLMapHandler -up-|> org.xml.sax.helpers.DefaultHandler
  fr.insa.lyon.ifa1.xml.XMLRequestsHandler -up-|> org.xml.sax.helpers.DefaultHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
